--- a/BaseFrame.Core/BaseFrame.Core.csproj
+++ b/BaseFrame.Core/BaseFrame.Core.csproj
@@ -51,6 +51,10 @@
     <Compile Include="Enums\PermissionType.cs" />
     <Compile Include="Extensions\ByteArrayExtension.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
+    <Compile Include="FastReflection\ConstructorInvoker.cs" />
+    <Compile Include="FastReflection\FastReflectionFactory.cs" />
+    <Compile Include="FastReflection\MethodInvoker.cs" />
+    <Compile Include="FastReflection\PropertyAccessor.cs" />
     <Compile Include="Helpers\FTPHelper.cs" />
     <Compile Include="Helpers\HttpHelper.cs" />
     <Compile Include="Helpers\LanguageHelper.cs" />
