--- a/BaseFrame.Web/BaseFrame.Web.csproj
+++ b/BaseFrame.Web/BaseFrame.Web.csproj
@@ -1296,6 +1296,7 @@
     <Content Include="Views\System\AuditLogList.cshtml" />
     <Content Include="Views\Home\CurrentUserEdit.cshtml" />
     <Content Include="Views\System\AuditLogList2.cshtml" />
+    <None Include="Properties\PublishProfiles\BaseFrame.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaseFrame.BLL\BaseFrame.BLL.csproj">
