--- a/BaseFrame.Web/Web.config
+++ b/BaseFrame.Web/Web.config
@@ -7,6 +7,7 @@
   <connectionStrings>
     <!--<add name="BaseFrameConnection" connectionString="persist security info=true;data source=.;initial catalog=BaseFrame;user id=sa;password=123456" providerName="System.Data.SqlClient" />-->
     <add name="BaseFrameConnection" connectionString="data source=.;initial catalog=BaseFrame;integrated security=True" providerName="System.Data.SqlClient" />
+    <add name="OracleConnection" connectionString="SERVER=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=BaseFrame)));uid=system;pwd=123456;persist security info=True" providerName="Oracle.ManagedDataAccess.Client" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
